--- a/django_project/templates/base.html
+++ b/django_project/templates/base.html
@@ -5,16 +5,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    {% comment %} <script src="{% static 'js/app.js' %}" defer></script> {% endcomment %}
+    <script src="{% static 'js/app.js' %}" defer></script>
     <title>My Site</title>
   </head>
   <body>
   	<header>
   		{%if request.user.is_authenticated %}
+  			<a href="{% url 'posts' %}">My Posts</a>
+  			<a href="{% url 'post-create' %}">New Post</a>
   			<span>Hi {{ request.user.username | title }}</span>
   			<a href="{% url 'logout' %}">Logout</a>
   		{%else%}
   			<a href="{% url 'login' %}">Login</a>
+  			<a href="{% url 'register' %}">Register</a>
   		{%endif%}
   	</header>
   	<main>
