--- a/django_project/templates/base.html
+++ b/django_project/templates/base.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    <script src="{% static 'js/app.js' %}" defer></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>    <script src="{% static 'js/app.js' %}" defer></script>
     <title>My Site</title>
   </head>
+  <div class="container">
   <body>
   	<header>
   		{%if request.user.is_authenticated %}
@@ -20,7 +22,7 @@
   			<a href="{% url 'register' %}">Register</a>
   		{%endif%}
   	</header>
-  	<main>
+	<main>
 	  	{% if messages %}
 			<div class="messages">
 			{% for message in messages %}
@@ -34,6 +36,6 @@
 	    {%block content%} 
 	    {%endblock content%}
   	</main>
-	
+</div>	
   </body>
 </html>
