--- a/django_project/templates/base.html
+++ b/django_project/templates/base.html
@@ -12,15 +12,27 @@
   <div class="container">
   <body>
   	<header>
+		<ul class="nav">
   		{%if request.user.is_authenticated %}
-  			<a href="{% url 'posts' %}">My Posts</a>
-  			<a href="{% url 'post-create' %}">New Post</a>
+		<li class="nav-item">
+  			<a class="nav-link active" aria-current="page" href="{% url 'posts' %}">My Posts</a>
+		</li>
+		<li class="nav-item">
+  			<a class="nav-link active" aria-current="page" href="{% url 'post-create' %}">New Post</a>
+		</li>
   			<span>Hi {{ request.user.username | title }}</span>
-  			<a href="{% url 'logout' %}">Logout</a>
+			<li class="nav-item">
+  			<a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Logout</a>
+			</li>
   		{%else%}
-  			<a href="{% url 'login' %}">Login</a>
-  			<a href="{% url 'register' %}">Register</a>
+		<li class="nav-item">
+  			<a class="nav-link active" aria-current="page" href="{% url 'login' %}">Login</a>
+		</li>
+		<li class="nav-item">
+  			<a class="nav-link active" aria-current="page" href="{% url 'register' %}">Register</a>
+		</li>
   		{%endif%}
+		</ul>
   	</header>
 	<main>
 	  	{% if messages %}
