--- a/django_project/blog/templates/blog/home.html
+++ b/django_project/blog/templates/blog/home.html
@@ -1,18 +1,17 @@
 {% extends 'base.html' %}
-	
+{% load django_bootstrap5 %}
 {% block content %}
-<h1>My Posts</h1>
-	{% for post in posts %}
-		<h2>{{ post.title }}</h2>
-		<small>Published on {{ post.published_at | date:"M d, Y" }} by {{ post.author | title}}</small>
-		<p>{{ post.content }}</p>
-		
-		{% if request.user.is_authenticated and request.user == post.author %}
-		<p>
-			<a href="{% url 'post-edit' post.id %}">Edit</a> 
-			<a href="{% url 'post-delete' post.id%}">Delete</a>
-		</p>
-		{% endif %}
-		
-	{% endfor %}
-{% endblock content %}
+  <h1>My Posts</h1>
+  {% for post in posts %}
+    <h2>{{ post.title }}</h2>
+    <small>Published on {{ post.published_at|date:'M d, Y' }} by {{ post.author|title }}</small>
+    <p>{{ post.content }}</p>
+
+    {% if request.user.is_authenticated and request.user == post.author %}
+      <p>
+        <a class="btn btn-primary" href="{% url 'post-edit' post.id %}">Edit</a>
+        <a class="btn btn-danger" href="{% url 'post-delete' post.id %}">Delete</a>
+      </p>
+    {% endif %}
+  {% endfor %}
+{% endblock %}
