--- a/django_project/blog/templates/blog/post_form.html
+++ b/django_project/blog/templates/blog/post_form.html
@@ -1,13 +1,15 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% load django_bootstrap5 %}
+{% block content %}
   <h2>
     {% if id %}
-       Edit
+      Edit
     {% else %}
       New
     {% endif %}Post
   </h2>
   <form method="post" novalidate>
     {% csrf_token %} {{ form.as_p }}
-    <input type="submit" value="Save" />
+    <input class="btn btn-primary" type="submit" value="Save" />
   </form>
 {% endblock %}
