--- a/django_project/templates/base.html
+++ b/django_project/templates/base.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>    <script src="{% static 'js/app.js' %}" defer></script>
-    <title>My Site</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    <title>My Site</title>
   </head>
   <div class="container">
   <body>
@@ -20,10 +19,12 @@
 		<li class="nav-item">
   			<a class="nav-link active" aria-current="page" href="{% url 'post-create' %}">New Post</a>
 		</li>
-  			<span>Hi {{ request.user.username | title }}</span>
-			<li class="nav-item">
-  			<a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Logout</a>
-			</li>
+		<li class="nav-item">
+			<a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Logout</a>
+		</li>
+		<li class="nav-link active" aria-current="page">
+			Hi {{ request.user.username | title }}
+		</li>
   		{%else%}
 		<li class="nav-item">
   			<a class="nav-link active" aria-current="page" href="{% url 'login' %}">Login</a>
@@ -38,7 +39,7 @@
 	  	{% if messages %}
 			<div class="messages">
 			{% for message in messages %}
-				<div class="alert {% if message.tags %}alert-{{ message.tags }}"{% endif %}>
+				<div class="alert {% if message.tags %}alert-{{ message.tags }}"{% endif %} >
 					{{ message }}
 				</div>
 			{% endfor %}
